force-app/main/default/objects/Wage_Deficiency_Violation_Type__c/Wage_Deficiency_Violation_Type__c.object-meta.xml
<CustomObject>
    <label>Wage Deficiency Violation Type</label>
    <nameField>
        <displayFormat>WDVT-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wage Deficiency Violation Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>