force-app/main/default/objects/Wage_Deficiency_Violation_Type__c/fields/Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Violation Type</label>
    <referenceTo>Violation_Type__c</referenceTo>
    <relationshipLabel>Wage Deficiency Violation Types</relationshipLabel>
    <relationshipName>Wage_Deficiency_Violation_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>