force-app/main/default/objects/Wage_Deficiency_Violation_Type__c/fields/Wage_Deficiency_Code__c.field-meta.xml
<CustomField>
    <fullName>Wage_Deficiency_Code__c</fullName>
    <label>Wage Deficiency Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>