force-app/main/default/objects/Wage_Deficiency_Violation_Type__c/fields/Wage_Deficiency_Type__c.field-meta.xml
<CustomField>
    <fullName>Wage_Deficiency_Type__c</fullName>
    <label>Wage Deficiency Type</label>
    <referenceTo>Wage_Deficiency_Type__c</referenceTo>
    <relationshipLabel>Wage Deficiency Violation Types</relationshipLabel>
    <relationshipName>Wage_Deficiency_Violation_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>